--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Change log for gfsmxl
 
+v0.0.2 Tue, 08 Jan 2008 13:30:33 +0100
+  + various updates for Gfsm::XL perl wrapper
+
 v0.0.1 Mon, 07 Jan 2008 13:05:47 +0100
-   + created
+  + created
