+ added gfsmxl_cascade_nbest_strings
git-svn-id: svn+ssh://svn.dwds.de/home/moocow/svn/public/gfsmxl/trunk@509 097f6656-c427-11dc-a790-1b5d5187385a

--- a/doc/programs/gfsmxl_cascade_compile.pod
+++ b/doc/programs/gfsmxl_cascade_compile.pod
@@ -21,7 +21,7 @@ gfsmxl_cascade_compile [OPTIONS] GFSM_FILE(s)
     -mMODE    --mode=MODE        Sort cascaded automata by explicit mode string
     -sSRTYPE  --semiring=SRTYPE  Specify semiring type.
     -zLEVEL   --compress=LEVEL   Specify compression level of output file.
-    -FFILE    --output=FILE      Specifiy output file (default=stdout).
+    -FFILE    --output=FILE      Specify output file (default=stdout).
 
 =cut
 
@@ -173,7 +173,7 @@ and 9 indicates the best possible compression.
 
 =item C<--output=FILE> , C<-FFILE>
 
-Specifiy output file (default=stdout).
+Specify output file (default=stdout).
 
 Default: '-'
 
