--- a/doc/programs/gfsmxl_cascade_nbest_strings.pod
+++ b/doc/programs/gfsmxl_cascade_nbest_strings.pod
@@ -23,6 +23,7 @@ gfsmxl_cascade_nbest_strings [OPTIONS] TEXT_FILE
     -pN_PATHS  --max-paths=N_PATHS  Specify maximum number of paths to extract
     -oN_OPS    --max-ops=N_OPS      Specify maximum number of configuration-pop operations
     -wFLOAT    --max-weight=FLOAT   Specify maximum weight of extractable paths
+    -a         --att-mode           Respect AT&T regex-style escapes in input strings
     -FFILE     --output=FILE        Specify output file (default=stdout).
 
 =cut
@@ -147,6 +148,15 @@ Default: '-1'
 Specify maximum weight of extractable paths
 
 Default: '1e+38'
+
+
+
+
+=item C<--att-mode> , C<-a>
+
+Respect AT&T regex-style escapes in input strings
+
+Default: '0'
 
 
 
