--- a/doc/programs/gfsmxl_cascade_nbest_strings.pod
+++ b/doc/programs/gfsmxl_cascade_nbest_strings.pod
@@ -17,7 +17,6 @@ gfsmxl_cascade_nbest_strings [OPTIONS] TEXT_FILE
  Options
     -h         --help               Print help and exit.
     -V         --version            Print version and exit.
-    -cFILE     --rcfile=FILE        Read an alternate configuration file.
     -CCASCADE  --cascade=CASCADE    Specify cascade for lookup
     -lLABFILE  --labels=LABFILE     Specify alphabet for string->label lookup
     -pN_PATHS  --max-paths=N_PATHS  Specify maximum number of paths to extract
@@ -88,17 +87,6 @@ Default: '0'
 Print version and exit.
 
 Default: '0'
-
-
-
-
-=item C<--rcfile=FILE> , C<-cFILE>
-
-Read an alternate configuration file.
-
-Default: 'NULL'
-
-See also: L<CONFIGURATION FILES>.
 
 
 
@@ -180,22 +168,6 @@ Default: '-'
 ###############################################################
 # configuration files
 ###############################################################
-=pod
-
-=head1 CONFIGURATION FILES
-
-Configuration files are expected to contain lines of the form:
-
-    LONG_OPTION_NAME    OPTION_VALUE
-
-where LONG_OPTION_NAME is the long name of some option,
-without the leading '--', and OPTION_VALUE is the value for
-that option, if any.  Fields are whitespace-separated.
-Blank lines and comments (lines beginning with '#')
-are ignored.
-
-No configuration files are read by default.
-
 =cut
 
 
@@ -216,7 +188,7 @@ using Getopt::Gen version 0.13.
 Translation was initiated
 as:
 
-   optgen.perl -l --nocfile --nohfile --notimestamp -F gfsmxl_cascade_nbest_strings gfsmxl_cascade_nbest_strings.gog
+   optgen.perl -l --no-handle-rcfile --nocfile --nohfile --notimestamp -F gfsmxl_cascade_nbest_strings gfsmxl_cascade_nbest_strings.gog
 
 =cut
 
