--- a/doc/programs/gfsmxl_cascade_nth.pod
+++ b/doc/programs/gfsmxl_cascade_nth.pod
@@ -17,7 +17,6 @@ gfsmxl_cascade_nth [OPTIONS] CASCADE_FILE
  Options
     -h       --help            Print help and exit.
     -V       --version         Print version and exit.
-    -cFILE   --rcfile=FILE     Read an alternate configuration file.
     -nN      --index=N         Extract the N-th automaton in the cascade
     -zLEVEL  --compress=LEVEL  Specify compression level of output file.
     -FFILE   --output=FILE     Specify output file (default=stdout).
@@ -88,17 +87,6 @@ Default: '0'
 
 
 
-=item C<--rcfile=FILE> , C<-cFILE>
-
-Read an alternate configuration file.
-
-Default: 'NULL'
-
-See also: L<CONFIGURATION FILES>.
-
-
-
-
 =item C<--index=N> , C<-nN>
 
 Extract the N-th automaton in the cascade
@@ -145,22 +133,6 @@ Default: '-'
 ###############################################################
 # configuration files
 ###############################################################
-=pod
-
-=head1 CONFIGURATION FILES
-
-Configuration files are expected to contain lines of the form:
-
-    LONG_OPTION_NAME    OPTION_VALUE
-
-where LONG_OPTION_NAME is the long name of some option,
-without the leading '--', and OPTION_VALUE is the value for
-that option, if any.  Fields are whitespace-separated.
-Blank lines and comments (lines beginning with '#')
-are ignored.
-
-No configuration files are read by default.
-
 =cut
 
 
@@ -181,7 +153,7 @@ using Getopt::Gen version 0.13.
 Translation was initiated
 as:
 
-   optgen.perl -l --nocfile --nohfile --notimestamp -F gfsmxl_cascade_nth gfsmxl_cascade_nth.gog
+   optgen.perl -l --no-handle-rcfile --nocfile --nohfile --notimestamp -F gfsmxl_cascade_nth gfsmxl_cascade_nth.gog
 
 =cut
 
