--- a/README.pod
+++ b/README.pod
@@ -119,4 +119,4 @@ Probably many.
 
 =head1 AUTHOR
 
-Bryan Jurish E<lt>moocow@ling.uni-potsdam.deE<gt>
+Bryan Jurish E<lt>moocow.bovine@gmail.comE<gt>
